# bonesinfra

./: .gitignore  .pylintrc  AGENTS.md  LICENSE  README.md  build.sh  main.py  pyproject.toml  ruff.toml  runtime.toml
.linters/: .gitignore
docs/: PROJECT.md  apparmor-plan.md  brittle-fix.md  lynis_report.txt  php-fpm-refactor.md  refactor.md  runtime-service-refactor.md
docs/lints/: README.md
docs/logs/: lawsnipe-502-finding.md  lawsnipe-commands-output.txt  lawsnipe-diagnostics-output.txt  lawsnipe-verdict.md
docs/plans/: build-user.md  copyfail-fix.md
docs/references/: bonesdeploy.md
docs/security/: 01-threat-model.md  02-filesystem-layout.md  03-identity-and-user-policy.md  04-systemd-service-hardening.md  05-apparmor-policy.md  07-cgroups-and-resource-isolation.md  08-seccomp-policy.md  09-network-isolation-policy.md  10-secrets-policy.md  11-web-server-policy.md  12-database-and-local-service-policy.md  13-deployment-and-build-worker-policy.md  14-containers-and-docker-policy.md  15-ssh-policy.md  16-logging-and-observability-policy.md  17-backup-policy.md  18-package-manager-and-runtime-policy.md  19-agent-audit-checklist.md  20-severity-guide.md  21-acceptable-exceptions.md  22-desired-end-state-summary.md
docs/thinking/: 04_bonesinfra_migration_scan.md  (+4 more)
hooks/: post-receive
kit/: bones.toml
src/: packages.py  paths.py  pyinfra_runner.py  runtime.py  setup.py  ssl.py  utils.py
tests/: __main__.py  helpers.py  test_build_user.py  test_cli.py  test_context.py  test_custom.py  test_dbs.py  test_deploy_structure.py  test_image_store.py  test_nginx_safety.py  test_paths.py  test_pyinfra_runner.py  test_runtime_nginx.py  test_runtimes.py  test_service.py  test_shared_paths.py  test_syntax.py  test_templates_j2.py  test_tripwires.py
(+136 files in other folders)
